<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
	        
<!--         <ListView -->
<!--         android:id="@+id/listView1" -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="200dp" -->
<!--         android:layout_centerHorizontal="true" -->
<!--         android:layout_marginTop="21dp" > -->
<!--     </ListView> -->
    
<Button
    android:id="@+id/btn_add_list_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="49dp"
    android:onClick="add_list_start_activity"
    android:text="@string/add_reminder_str" />
    
<Button
        android:id="@+id/btn_json"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_add_list_item"
        android:layout_alignRight="@+id/btn_add_list_item"
        android:layout_below="@+id/btn_add_list_item"
        android:layout_marginTop="20dp"
        android:text="@string/jsonTitle_str"
        android:onClick="parseJson" />

<Button
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/btn_json"
    android:layout_centerVertical="true"
    android:onClick="opencrashfunc"
    android:text="@string/crash_str" />

<Button
    android:id="@+id/button2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/button1"
    android:layout_below="@+id/button1"
    android:layout_marginTop="40dp"
    android:onClick="displayAd"
    android:text="@string/add_str" />

<Button
    android:id="@+id/button3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/button2"
    android:layout_alignRight="@+id/button2"
    android:layout_below="@+id/button2"
    android:layout_marginTop="21dp"
    android:onClick="captureFromCamera"
    android:text="@string/camera_str" />

</RelativeLayout>