<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myorganizer.UpdateList$PlaceholderFragment" >

    <EditText
        android:id="@+id/edit_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:ems="10" 
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_pri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_desc"
        android:layout_below="@+id/edit_desc"
        android:layout_marginTop="20dp"
        android:ems="10" 
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/edit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_date"
        android:layout_centerVertical="true"
        android:ems="10" 
        android:inputType="time"/>

    <EditText
        android:id="@+id/edit_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_time"
        android:layout_below="@+id/edit_time"
        android:layout_marginTop="24dp"
        android:ems="10" 
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_time"
        android:layout_alignLeft="@+id/edit_pri"
        android:layout_marginBottom="19dp"
        android:ems="10" 
        android:inputType="date"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_pri"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/edit_desc"
        android:text="@string/description_str" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_date"
        android:layout_alignBottom="@+id/edit_date"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/date_str1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_time"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/time_str" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_location"
        android:layout_alignBottom="@+id/edit_location"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/location_str" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_pri"
        android:layout_alignBottom="@+id/edit_pri"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/priority_str" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edit_location"
        android:layout_below="@+id/edit_location"
        android:layout_marginTop="38dp"
        android:onClick="updateRow"
        android:text="@string/update_btn_str" />

    <Button
        android:id="@+id/btn_get_old_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_update"
        android:layout_alignBottom="@+id/btn_update"
        android:layout_alignLeft="@+id/textView5"
        android:onClick="GetOldValues"
        android:text="@string/set_btn_str" />

</RelativeLayout>
