<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myproj.DisplayAddListActivity" >

    <TextView
        android:id="@+id/text_listTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/add_reminder_str"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_add_pic"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/editText_location"
        android:text="@string/pic_btn_str"
        android:textSize="12sp" 
        android:onClick="captureFromCamera"/>

    <TextView
        android:id="@+id/text_dateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_add_pic"
        android:layout_alignLeft="@+id/btn_add_pic"
        android:layout_marginBottom="14dp"
        android:text="@string/date_str" />

    <TextView
        android:id="@+id/text_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_dateTime"
        android:layout_alignLeft="@+id/text_dateTime"
        android:layout_marginBottom="36dp"
        android:text="@string/priority_str" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_priority"
        android:layout_alignLeft="@+id/text_priority"
        android:layout_marginBottom="30dp"
        android:text="@string/description_str" />

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_description"
        android:layout_toRightOf="@+id/btn_add_pic"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    <EditText
        android:id="@+id/edittext_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_description"
        android:layout_below="@+id/text_description"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_dateTime"
        android:layout_alignBottom="@+id/text_dateTime"
        android:layout_alignLeft="@+id/edittext_priority"
        android:ems="10"
        android:inputType="date" >
    </EditText>

    <EditText
        android:id="@+id/editText_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText_date"
        android:layout_alignBottom="@+id/editText_date"
        android:layout_toRightOf="@+id/editText_location"
        android:ems="10"
        android:inputType="time" >
    </EditText>

    <Button
        android:id="@+id/btn_Display_List"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_add_list_item"
        android:layout_toRightOf="@+id/btn_add_list_item"
        android:onClick="DisplayList"
        android:text="@string/display_reminder_str" />

    <Button
        android:id="@+id/btn_add_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_add_pic"
        android:layout_below="@+id/btn_add_pic"
        android:layout_marginTop="68dp"
        android:onClick="AddListItem"
        android:text="@string/add_reminder_str" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_add_pic"
        android:layout_below="@+id/btn_add_pic"
        android:layout_marginTop="26dp"
        android:text="@string/location_str" />

    <EditText
        android:id="@+id/editText_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_location"
        android:layout_alignBottom="@+id/text_location"
        android:layout_alignLeft="@+id/text_listTitle"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="text" />

</RelativeLayout>